--- a/ToDoList/Views/Categories/Details.cshtml
+++ b/ToDoList/Views/Categories/Details.cshtml
@@ -2,36 +2,27 @@
   Layout = "_Layout";
 }
 
-@using ToDoList.Models;
 @model ToDoList.Models.Category;
 
 <h2>Category Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
 
-
-@* @if (@Model.Items.Count == 0)
+@if(@Model.Items.Count == 0)
 {
-  <p>no items found</p>
-} *@
-
-@* <ul>
-@foreach (Item item in @Model.Items)
-{
-
-   <li>Description: @item.Description</li>
+  <p>This category does not contain any items</p>
 }
-</ul> *@
-
-@* <ul>
-@foreach(Item item in @ViewBag.itemList)
+else
 {
-    <li>@item.Description</li>
+  <h4>Items the category contains:</h4>
+  <ul>
+  @foreach(var join in Model.Items)
+  {
+    <li>@join.Item.Description</li>
+  }
+  </ul>
 }
-</ul> *@
 
-
-<p>@Html.ActionLink("Add new item", "Create", "Items")</p>
 <p>@Html.ActionLink("Back to categories", "Index")</p>
 <p>@Html.ActionLink("Edit Category", "Edit", new { id = Model.CategoryId })</p>
 <p>@Html.ActionLink("Delete Category", "Delete", new { id = Model.CategoryId })</p>
