--- a/ToDoList/Views/Items/Create.cshtml
+++ b/ToDoList/Views/Items/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.LabelFor(model => model.Description)  // Display's the property name
     @Html.TextBoxFor(model => model.Description) // Creates input field 
 
-    @Html.LabelFor(model => model.Category)
+    @Html.LabelFor(model => model.Categories)
     @Html.DropDownList("CategoryId")
 
     <input type="submit" value="Add new item" class="btn btn-default" />
