--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -3,43 +3,25 @@
 }
 
 @using ToDoList.Models;
-@model List<ToDoList.Models.Item>;
+@using System.Security.Claims
+@model IEnumerable<ToDoList.Models.Item>
 
-<h1>Items</h1>
+<!-- <h1>Items for @User.Identity.Name</h1> -->
 
-@if (@Model.Count == 0)
+@if (Model.Any())
+{
+  <ul>
+    @foreach (Item item in Model)
+    {
+      <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId })</li>
+    }
+  </ul>
+} 
+else
 {
   <h3>No items have been added yet!</h3>
 }
 
-@foreach (Item item in @Model)
-{
-  <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) | @item.Category.Name</li>
-}
-
 <p>@Html.ActionLink("Add new item", "Create")</p>
-<p>@Html.ActionLink("Add new category", "Create")</p>
+
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
-
-
-
-
-
-
-@* public ActionResult Index()
-{
-  List<Item> model = _db.Items.Include(items => items.Category).ToList();
-  return View(model);
-}
-
-
-namespace ToDoList.Models
-{
-  public class Item
-  {
-    public int ItemId { get; set; }
-    public string Description { get; set; }
-    public int CategoryId { get; set; }
-    public virtual Category Category { get; set; }
-  }
-} *@
