--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -3,10 +3,9 @@
 }
 
 @using ToDoList.Models;
-@using System.Security.Claims
 @model IEnumerable<ToDoList.Models.Item>
 
-<!-- <h1>Items for @User.Identity.Name</h1> -->
+<h1>Items for @User.Identity.Name</h1>
 
 @if (Model.Any())
 {
