--- a/ToDoList/Views/Home/Index.cshtml
+++ b/ToDoList/Views/Home/Index.cshtml
@@ -10,3 +10,4 @@
 
 <p>@Html.ActionLink("See all items", "Index", "Items")</p>
 <p>@Html.ActionLink("See all categories", "Index", "Categories")</p>
+<p>@Html.ActionLink("Create an account", "Index", "Account")</p>
