--- a/ToDoList/Views/Items/Create.cshtml
+++ b/ToDoList/Views/Items/Create.cshtml
@@ -8,16 +8,12 @@
 
 @using (Html.BeginForm())
 {
-   
-    @Html.LabelFor(model => model.Description)  // Display's the property name
-    @Html.TextBoxFor(model => model.Description) // Creates input field 
+    @Html.LabelFor(model => model.Description)
+    @Html.TextBoxFor(model => model.Description)
 
-    @Html.LabelFor(model => model.Categories)
+    @Html.Label("Select category")
     @Html.DropDownList("CategoryId")
 
     <input type="submit" value="Add new item" class="btn btn-default" />
 }
 <p>@Html.ActionLink("Show all items", "Index")</p>
-
-
-
